--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,12 @@
   <body>
   <div class="container">  
     <h1>Blast Query App</h1>
-    <h2>Upload FASTA File</h2>
-    <h3 class="text-danger">{{ errmsg }}</h3>
+    <p class="text-danger">{{ errmsg }}</p> 
+    <p class="font-weight-bold">Upload a FASTA file here</p>
     <form method="POST" action="" enctype="multipart/form-data">
       <p><input type="file" name="file"></p>
       <p><input type="submit" value="Submit"></p>
     </form>
   </div>
-  </body>
+</body>
 </html>
