--- a/templates/data.html
+++ b/templates/data.html
@@ -12,26 +12,28 @@
 <div class="container">
     <h1>Result</h1>
     <p>Filename: {{filename}}</p>
-</div>
-{% for items in files %}
-<table class="table table-bordered table-sm">
-    <thead>
-      <tr>
-        <th scope="col">Query ID</th>
-        <th scope="col">Query Length</th>
-        <th scope="col">Title</th>
-        <th scope="col">Hsp_evalue</th>
-      </tr>
-    </thead>
-    <tbody>
-        {% for item in items %}
+    <p>Query count: {{i}}</p>
+
+  {% for items in files %}
+  <table class="table table-bordered table-sm">
+      <thead>
         <tr>
-            <td>{{item["query_id"]}}</td>
-            <td class="text-right">{{item["query_length"]}}</td>
-            <td>{{item["sequence"]}}</td>
-            <td >{{item["evalue"]}}</td>
+          <th scope="col">Query ID</th>
+          <th scope="col">Query Length</th>
+          <th scope="col">Title</th>
+          <th scope="col">Hsp_evalue</th>
         </tr>
-        {% endfor %}
-    </tbody>
+      </thead>
+      <tbody>
+          {% for item in items %}
+          <tr>
+              <td>{{item["query_id"]}}</td>
+              <td class="text-right">{{item["query_length"]}}</td>
+              <td>{{item["sequence"]}}</td>
+              <td >{{item["evalue"]}}</td>
+          </tr>
+          {% endfor %}
+      </tbody>
   {% endfor %}
   </table>
+</div>
